--- a/views/stylesheet/stylesheet.css
+++ b/views/stylesheet/stylesheet.css
@@ -1,4 +1,7 @@
-@import url(//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&subset=latin,cyrillic-ext,greek-ext,vietnamese);
+*{
+	padding: 0;
+	margin: 0;
+}
 
 body {	
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -8,11 +11,17 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 	-ms-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
-	
-	margin: auto;
-	padding: 0;
 	text-rendering: optimizeLegibility;	
 	font-size: 13px;
+}
+
+a{
+	color: aquamarine;
+}
+
+header {
+	background-color: #282c34;
+	font-size: 16px;
 }
 
 .full-screen {
@@ -30,52 +39,24 @@ body {
 }
 .form-signin .checkbox {
 	font-weight: 600;
-  }
-  .form-signin .form-control {
+}
+
+.form-signin .form-control {
 	position: relative;
 	box-sizing: border-box;
 	height: auto;
 	padding: 10px;
 	font-size: 16px;
-  }
-  .form-signin .form-control:focus {
+}
+.form-signin .form-control:focus {
 	z-index: 2;
-  }
-
-header {
-	color: aquamarine;
-	background-color: #282c34;   			
-	font-size: 16px;
-}
-header a {
-	color: aquamarine;	
-}
-
-nav a {
-	color: aquamarine;	
-}
-.navbar-brand  {
-	color: aquamarine;	
-}
-
-navheader {
-	color: aquamarine;	
-}
-
-content a  {		
-	color: aquamarine;
 }
 
 footer {
-	color: aquamarine;
 	background-color: #282c34;	
-	text-align: center;		
-	justify-content: center;
+	text-align: center;
 }
 
-footer a {
-	color: aquamarine;
-}
 
 h1, h2, h3, h4, h5, h6, p {
 	margin-top: auto;
