--- a/views/stylesheet/stylesheet.css
+++ b/views/stylesheet/stylesheet.css
@@ -2,6 +2,9 @@
 	padding: 0;
 	margin: 0;
 }
+html{
+	height: 100%;
+}
 
 body {	
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -22,13 +25,6 @@ a{
 header {
 	background-color: #282c34;
 	font-size: 16px;
-}
-
-.full-screen {
-    min-height: 97.15vh;
-    min-width: 98.7vw;
-	height: 100%;
-    width: 100%;  
 }
 
 .form-signin {
@@ -55,6 +51,7 @@ header {
 footer {
 	background-color: #282c34;	
 	text-align: center;
+	flex: 0 0 auto;
 }
 
 
