--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <div id="content flex-grow-1 h-100" class= "border bg-light">
+  <div class="content flex-grow-1 h-100 border bg-light">
     <div class="page-header">
       <div class="container-fluid">
         <div class="pull-right">
