--- a/views/template/common/login.twig
+++ b/views/template/common/login.twig
@@ -1,5 +1,5 @@
 
-<div id="content flex-grow-1 h-100">
+<div class="content flex-grow-1 h-100">
     <div class="container-fluid">
         {% if success %}
             <div class="alert alert-success alert-dismissible"><i class="fa fa-check-circle"></i> {{ success }}
