--- a/views/template/common/header.twig
+++ b/views/template/common/header.twig
@@ -1,9 +1,9 @@
-<header id="header" class="navbar navbar-dark" vertical-align="middle">
+<header id="header" class="navbar navbar-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="{{ home }}" >{{ name }}</a>        
     {% if logged %}        
       <nav>
-        <ul class="nav btn-group" align="right">
+        <ul class="nav btn-group align-items-center">
           <li class="nav-item btn">
             <a class="nav-link" aria-current="page" href="#">Конфигурация</a>
           </li>    
@@ -11,13 +11,20 @@
             <a class="nav-link" aria-current="page" href="#" onclick="user_table()">Пользователи</a>
           </li> 
           <li class="nav-item btn">
-            <a class="nav-link" aria-current="page" href="#"><img src="{{ image }}" alt="" width="30" height="30" id="user-profile" class="img-circle" />{{ username }}</i></a>                        
+            <a class="nav-link d-flex gap-1" aria-current="page" href="#">
+              <img src="{{ image }}" alt="logo" width="30" height="30" id="user-profile" class="img-circle" />
+              <span>{{ username }}</span>
+            </a>
           </li>      
           <li class="nav-item dropdown btn">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true"></a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Справка</a></li>
-              <li><a class="dropdown-item" href="#">Информация</a></li>
+              <li>
+                <a class="dropdown-item" href="#">Справка</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#">Информация</a>
+              </li>
               <li><hr class="dropdown-divider"></li>
               <li>
                 <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">О программе...</a>      
