--- a/views/template/common/column_left.twig
+++ b/views/template/common/column_left.twig
@@ -1,6 +1,6 @@
-<div id="column-left" class="container-fluid border bg-light" >   
+<div id="column-left" class=" border sidebar">
   <nav id="sidebarMenu">       
-    <h6 class="sidebar-heading d-flex justify-content-betweens px-3 mt-4 mb-1 text-muted">
+    <h6 class="sidebar-heading d-flex justify-content-between px-3 mt-4 mb-1 text-muted">
       <span>Конфигуратор</span>
       <a class="link-secondary" href="#" aria-label="Add a new class">
         <span data-feather="plus-circle"></span>
