--- a/views/stylesheet/stylesheet.css
+++ b/views/stylesheet/stylesheet.css
@@ -1,6 +1,7 @@
-*{
+*, *::after, *::before{
 	padding: 0;
 	margin: 0;
+	box-sizing: border-box;
 }
 html{
 	height: 100%;
@@ -56,7 +57,17 @@ footer {
 
 h1, h2, h3, h4, h5, h6, p {
 	margin-top: auto;
+	margin-bottom: unset;
 }
 .sidebar{
 	background: #282c34;
+}
+.row{
+	--bs-gutter-x: 0;
+}
+.list{
+	min-width: 150px;
+}
+.menu-title{
+	color: aquamarine;
 }
