--- a/views/template/common/column_left.twig
+++ b/views/template/common/column_left.twig
@@ -1,54 +1,47 @@
-<div id="column-left" class=" border sidebar">
-  <nav id="sidebarMenu">       
-    <h6 class="sidebar-heading d-flex justify-content-between px-3 mt-4 mb-1 text-muted">
-      <span>Конфигуратор</span>
+<div id="column-left" class=" sidebar">
+  <div id="sidebarMenu">
+    <h6 class="d-flex justify-content-between text-muted">
+      <span class="m-auto d-block menu-title">Конфигуратор</span>
       <a class="link-secondary" href="#" aria-label="Add a new class">
         <span data-feather="plus-circle"></span>
       </a>
     </h6>
-    <ul class="nav btn-group-vertical">
+    <ul class="sidebar-list nav btn-group-vertical">
         <li class="nav-item">
         <a class="nav-link btn" href="#">
-          <span data-feather="file-text"></span>
           Подсистемы
         </a>
       </li>  
       <li class="nav-item">
         <a class="nav-link btn" href="#">
-          <span data-feather="file-text"></span>
           Константы
         </a>
       </li>  
       <li class="nav-item">
         <a class="nav-link btn" href="#">
-          <span data-feather="file-text"></span>
           Справочники
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link  btn" href="#">
-          <span data-feather="file-text"></span>
           Документы
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link btn" href="#">
-          <span data-feather="file-text"></span>
           Регистры
         </a>
       </li>  
       <li class="nav-item">
         <a class="nav-link btn" href="#">
-          <span data-feather="file-text"></span>
           Обработки
         </a>
       </li>  
       <li class="nav-item">
         <a class="nav-link btn" href="#">
-          <span data-feather="file-text"></span>
           Отчеты
         </a>
       </li>              
     </ul>
-  </nav>         
+  </div>
 </div>
