--- a/views/template/common/login.twig
+++ b/views/template/common/login.twig
@@ -13,6 +13,10 @@
         <form class="form-signin w-100 p-3 m-auto d-flex flex-column gap-3" action="{{ action }}" method="post" enctype="application/json">
             <h2 class="h3 mb-3 font-weight-normal"><i class="fa fa-lock"></i> {{ text_login }}</h2>
             <div class="form-group">
+                <input type='radio' id='Developer' name='operation_mode'> <label for='Developer'>Developer</label>                    
+                <input type='radio' id='Enterprise' name='operation_mode'> <label for='Enterprise'>Enterprise</label> 
+            </din>
+            <div class="form-group">
                 <label for="input-username">{{ entry_username }}</label>
                 <div class="input-group gap-2">
                     <span class="input-group-addon"><i class="fa fa-user"></i></span>
