--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -16,7 +16,7 @@
      <nav>
         <ul class="nav btn-group" align="right">
           <li class="nav-item btn">
-            <a class="nav-link" aria-current="page" href="#" data-bs-toggle="modal" data-bs-target="#usersModal">Добавить</a>
+            <a class="nav-link fa-plus-circle" aria-current="page" href="#" data-bs-toggle="modal" data-bs-target="#usersModal">Добавить</a>
           </li>    
           <li class="nav-item btn">
             <a class="nav-link" aria-current="page" href="#" onclick="user_delete()">Удалить</a>
