--- a/views/template/common/login.twig
+++ b/views/template/common/login.twig
@@ -35,7 +35,7 @@
                 {% endif %}
             </div>
             <div class="text-right">
-                <button type="submit" class="btn btn-primary" style="background-color:DeepSkyBlue; border-color:aquamarine"><i class="fa fa-rocket"></i> {{ button_login }}</button>
+                <button type="submit" class="btn btn-primary" style="background-color:DeepSkyBlue; border-color:SkyBlue"><i class="fa fa-rocket"></i> {{ button_login }}</button>
             </div>
             {% if redirect %}
                 <input type="hidden" name="redirect" value="{{ redirect }}" />
