--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -1,4 +1,4 @@
-<div class="content flex-grow-1 h-100 border bg-light">
+<div>
   <div class="page-header">
     <div class="container-fluid">
       <div class="pull-right">
@@ -12,38 +12,39 @@
       </ul>
     </div>
   </div>
-  <table onclick="row_select()" id = "user_table" class="table table-striped table-hover table-sm table-responsive" style="height: 300px; overflow-y: scroll;">
-     <nav>
-        <ul class="nav btn-group" align="right">
-          <li class="nav-item btn">
-            <a class="nav-link" aria-current="page" href="#" data-bs-toggle="modal" data-bs-target="#usersModal"><i class="fa fa-1,5x fa-fw fa-plus-circle"></i>Добавить</a>
-          </li>    
-          <li class="nav-item btn">
-            <a class="nav-link" aria-current="page" href="#" onclick="user_delete()">Удалить</a>
-          </li> 
-          <li class="nav-item btn">
-            <a class="nav-link" aria-current="page" href="#">
-              <img src="" alt="" width="10" height="10" id="user_update" class="img-circle" />Редактировать</img>
-            </a>                        
-          </li>      
-          <li class="nav-item dropdown btn">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true"></a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Обновить</a></li>
-              <li><a class="dropdown-item" href="#">Информация</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <!--<li>
-                <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#usersModal">...</a>      
-              </li>-->
-            </ul>
-          </li>         
+  <nav>
+    <ul class="nav btn-group">
+      <li class="nav-item btn">
+        <a class="nav-link" aria-current="page" href="#" data-bs-toggle="modal" data-bs-target="#usersModal"><i class="fa fa-1,5x fa-fw fa-plus-circle"></i>Добавить</a>
+      </li>
+      <li class="nav-item btn">
+        <a class="nav-link" aria-current="page" href="#" onclick="user_delete()">Удалить</a>
+      </li>
+      <li class="nav-item btn">
+        <a class="nav-link" aria-current="page" href="#">
+          <img src="" alt="" width="10" height="10" id="user_update" class="img-circle" />Редактировать
+        </a>
+      </li>
+      <li class="nav-item dropdown btn">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true"></a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li><a class="dropdown-item" href="#">Обновить</a></li>
+          <li><a class="dropdown-item" href="#">Информация</a></li>
+          <li><hr class="dropdown-divider"></li>
+          <!--<li>
+            <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#usersModal">...</a>
+          </li>-->
         </ul>
-      </nav>        
+      </li>
+    </ul>
+  </nav>
+  <table onclick="row_select()" id = "user_table" class="table table-striped table-hover table-sm table-responsive" style="height: 300px; overflow-y: scroll;">
+
   </table>
 </div>
 {% include "./security.twig" %}
 <!-- Modal  -->
-<div class="modal fade" id="usersModal" tabindex="-1" aria-labelledby="usersModalLabel" aria-hidden="true" metod='post' >
+<div class="modal fade" id="usersModal" tabindex="-1" aria-labelledby="usersModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -60,7 +61,7 @@
             <div class="input-group">
               <input type="password" name="password" value="" placeholder="Password" id="input-password" class="form-control"/>                            
             </div>              
-            <label for="input-Descr">Descr:</label>                     
+            <label for="input-descr">Descr:</label>
             <div class="input-group">
               <input type="text" name="Descr" value="" placeholder="Descr" id="input-descr" class="form-control"/>            
             </div>             
