--- a/views/index.twig
+++ b/views/index.twig
@@ -16,8 +16,8 @@
         <div class="wrapper d-flex flex-column h-100">
             {% include "./template/common/header.twig" %}
             {% if logged %}
-                <div class="bg-light content flex-grow-1">
-                <div class = "row">  
+                <div class="bg-light content flex-grow-1 h-100">
+                <div class = "row h-100">  
                     <div class="col-2 list">{% include "./template/common/column_left.twig" %}</div>
                     <div class="col">{% include "./template/common/dashboard.twig" %}</div>
                 </div>
