--- a/views/template/common/column_left.twig
+++ b/views/template/common/column_left.twig
@@ -1,4 +1,4 @@
-<div id="column-left" class=" sidebar">
+<div id="column-left" class="sidebar h-100"  style="background-color:LightSlateGray">
   <div id="sidebarMenu">
     <h6 class="d-flex justify-content-between text-muted">
       <span class="m-auto d-block menu-title">Конфигуратор</span>
@@ -7,40 +7,26 @@
       </a>
     </h6>
     <ul class="sidebar-list nav btn-group-vertical">
-        <li class="nav-item">
-        <a class="nav-link btn" href="#">
-          Подсистемы
-        </a>
+      <li class="nav-item">
+        <a class="nav-link btn" href="#">Подсистемы</a>
       </li>  
       <li class="nav-item">
-        <a class="nav-link btn" href="#">
-          Константы
-        </a>
+        <a class="nav-link btn" href="#">Константы</a>
       </li>  
       <li class="nav-item">
-        <a class="nav-link btn" href="#">
-          Справочники
-        </a>
+        <a class="nav-link btn" href="#">Справочники</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link  btn" href="#">
-          Документы
-        </a>
+        <a class="nav-link btn" href="#">Документы</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link btn" href="#">
-          Регистры
-        </a>
+        <a class="nav-link btn" href="#">Регистры</a>
       </li>  
       <li class="nav-item">
-        <a class="nav-link btn" href="#">
-          Обработки
-        </a>
+        <a class="nav-link btn" href="#">Обработки</a>
       </li>  
       <li class="nav-item">
-        <a class="nav-link btn" href="#">
-          Отчеты
-        </a>
+        <a class="nav-link btn" href="#">Отчеты</a>
       </li>              
     </ul>
   </div>
