--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -1,5 +1,5 @@
-<div class="content flex-grow-1 h-100 border bg-light">
-  <div class="page-header">
+<div class="content flex-grow-1 border bg-light h-100">
+  <!--<div class="page-header">
     <div class="container-fluid">
       <div class="pull-right">
         <button type="button" id="button-setting" title="{{ button_setting }}" data-loading-text="{{ text_loading }}" class="btn btn-info"><i class="fa fa-cog"></i></button>
@@ -11,10 +11,10 @@
         {% endfor %}
       </ul>
     </div>
-  </div>
-  <table onclick="row_select()" id = "user_table" class="table table-striped table-hover table-sm table-responsive" style="height: 300px; overflow-y: scroll;">
-     <nav>
-        <ul class="nav btn-group" align="right">
+  </div>-->
+  <table onclick="row_select()" id = "user_table" class="table table-striped table-hover table-sm table-responsive" style="overflow-y: scroll;">
+     <div>
+        <ul class="nav btn-group" align="left" style="background-color:LightSlateGray">
           <li class="nav-item btn">
             <a class="nav-link" aria-current="page" href="#" data-bs-toggle="modal" data-bs-target="#usersModal"><i class="fa fa-1,5x fa-fw fa-plus-circle"></i>Добавить</a>
           </li>    
@@ -22,9 +22,7 @@
             <a class="nav-link" aria-current="page" href="#" onclick="user_delete()">Удалить</a>
           </li> 
           <li class="nav-item btn">
-            <a class="nav-link" aria-current="page" href="#">
-              <img src="" alt="" width="10" height="10" id="user_update" class="img-circle" />Редактировать</img>
-            </a>                        
+            <a class="nav-link" aria-current="page" href="#">Редактировать</a>                   
           </li>      
           <li class="nav-item dropdown btn">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true"></a>
@@ -38,7 +36,7 @@
             </ul>
           </li>         
         </ul>
-      </nav>        
+      </div>        
   </table>
 </div>
 {% include "./security.twig" %}
