--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -13,29 +13,23 @@
     </div>
   </div>-->
   <table onclick="row_select()" id = "user_table" class="table table-striped table-hover table-sm table-responsive" style="overflow-y: scroll;">
-     <div>
-        <ul class="nav btn-group" align="left" style="background-color:LightSlateGray">
-          <li class="nav-item btn">
-            <a class="nav-link" aria-current="page" href="#" data-bs-toggle="modal" data-bs-target="#usersModal"><i class="fa fa-1,5x fa-fw fa-plus-circle"></i>Добавить</a>
-          </li>    
-          <li class="nav-item btn">
-            <a class="nav-link" aria-current="page" href="#" onclick="user_delete()">Удалить</a>
-          </li> 
-          <li class="nav-item btn">
-            <a class="nav-link" aria-current="page" href="#">Редактировать</a>                   
-          </li>      
+     <div class="nav btn-toolbar btn-group-sm" role="toolbar" align="left" style="border-color:black;background-color:LightSlateGray">
+          <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#usersModal">
+            <i class="fa fa-1x fa-plus-circle"></i>Добавить</button>          
+          <button type="button" class="btn btn-outline-secondary">Редактировать</button>   
+          <button type="button" class="btn btn-outline-secondary" onclick="user_delete()">  
+            <i class="fa fa-1x fa-minus-circle"></i>Удалить</button>          
           <li class="nav-item dropdown btn">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true"></a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="#">Обновить</a></li>
-              <li><a class="dropdown-item" href="#">Информация</a></li>
+              <li><a class="dropdown-item" href="#">Дополнительно</a></li>
               <li><hr class="dropdown-divider"></li>
               <!--<li>
                 <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#usersModal">...</a>      
               </li>-->
             </ul>
-          </li>         
-        </ul>
+          </li>                 
       </div>        
   </table>
 </div>
