--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -1,5 +1,5 @@
 <div class="content flex-grow-1 h-100 border bg-light">
-  <div class="page-header">
+  <!--<div class="page-header">
     <div class="container-fluid">
       <div class="pull-right">
         <button type="button" id="button-setting" title="{{ button_setting }}" data-loading-text="{{ text_loading }}" class="btn btn-info"><i class="fa fa-cog"></i></button>
@@ -11,7 +11,7 @@
         {% endfor %}
       </ul>
     </div>
-  </div>
+  </div>-->
   <table onclick="row_select()" id = "user_table" class="table table-striped table-hover table-sm table-responsive" style="height: 300px; overflow-y: scroll;">
      <nav>
         <ul class="nav btn-group" align="right">
