--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -12,19 +12,16 @@
       </ul>
     </div>
   </div>-->
-  <table onclick="row_select()" id = "user_table" class="table table-striped table-hover table-sm table-responsive" style="height: 300px; overflow-y: scroll;">
-     <nav>
-        <ul class="nav btn-group" align="right">
-          <li class="nav-item btn">
-            <a class="nav-link" aria-current="page" href="#" data-bs-toggle="modal" data-bs-target="#usersModal"><i class="fa fa-1,5x fa-fw fa-plus-circle"></i>Добавить</a>
+  <table onclick="row_select()" id = "user_table" class="table table-striped table-hover table-sm table-responsive" style="height: 300px; overflow-y: scroll;">     
+        <div class="btn-group" align="left" style="background-color:LightSlateGray">
+          <li class="btn">
+            <a class="nav-link" data-bs-toggle="modal" data-bs-target="#usersModal"><i class="fa fa-1,5x fa-fw fa-plus-circle"></i>Добавить</a>
           </li>    
-          <li class="nav-item btn">
-            <a class="nav-link" aria-current="page" href="#" onclick="user_delete()">Удалить</a>
+          <li class="btn">
+            <a class="nav-link" onclick="user_delete()">Удалить</a>
           </li> 
-          <li class="nav-item btn">
-            <a class="nav-link" aria-current="page" href="#">
-              <img src="" alt="" width="10" height="10" id="user_update" class="img-circle" />Редактировать</img>
-            </a>                        
+          <li class="btn">
+            <a class="nav-link" >Редактировать</a>                        
           </li>      
           <li class="nav-item dropdown btn">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true"></a>
@@ -37,8 +34,7 @@
               </li>-->
             </ul>
           </li>         
-        </ul>
-      </nav>        
+        </div>      
   </table>
 </div>
 {% include "./security.twig" %}
