--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -15,19 +15,16 @@
   <table onclick="row_select()" id = "user_table" class="table table-striped table-hover table-sm table-responsive" style="height: 300px; overflow-y: scroll;">     
         <div class="btn-group" align="left" style="background-color:LightSlateGray">
           <li class="btn">
-            <a class="nav-link" data-bs-toggle="modal" data-bs-target="#usersModal"><i class="fa fa-1,5x fa-fw fa-plus-circle"></i>Добавить</a>
-          </li>    
-          <li class="btn">
-            <a class="nav-link" onclick="user_delete()">Удалить</a>
+            <a class="nav-link" data-bs-toggle="modal" data-bs-target="#usersModal">
+            <i class="fa fa-1x fa-plus-circle"></i>Добавить</a>
           </li> 
-          <li class="btn">
-            <a class="nav-link" >Редактировать</a>                        
-          </li>      
-          <li class="nav-item dropdown btn">
+          <li class="btn"><a class="nav-link">Редактировать</a></li>     
+          <li class="btn"><a class="btn nav-link" onclick="user_delete()">Удалить</a></li>               
+          <li class="dropdown btn">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true"></a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Обновить</a></li>
-              <li><a class="dropdown-item" href="#">Информация</a></li>
+              <li><a class="dropdown-item">Обновить</a></li>
+              <li><a class="dropdown-item">Дополнительно</a></li>
               <li><hr class="dropdown-divider"></li>
               <!--<li>
                 <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#usersModal">...</a>      
