--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -12,7 +12,7 @@
       </ul>
     </div>
   </div>-->
-  <table onclick="row_select()" id = "user_table" class="table table-striped table-hover table-sm table-responsive" style="height: 300px; overflow-y: scroll;">     
+  <table onclick="row_select()" id = "user_table" class="table table-striped table-hover table-sm table-responsive" style="overflow-y: scroll;">     
         <div class="btn-group" align="left" style="background-color:LightSlateGray">
           <li class="btn">
             <a class="nav-link" data-bs-toggle="modal" data-bs-target="#usersModal">
