--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -13,7 +13,7 @@
     </div>
   </div>-->
   <table onclick="row_select()" id = "user_table" class="table table-striped table-hover table-sm table-responsive" style="overflow-y: scroll;">     
-        <div class="btn-group" align="left" style="background-color:LightSlateGray">
+        <div class="btn-group btn-group-sm" align="left" style="background-color:LightSlateGray">
           <li class="btn">
             <a class="nav-link" data-bs-toggle="modal" data-bs-target="#usersModal">
             <i class="fa fa-1x fa-plus-circle"></i>Добавить</a>
