--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -19,7 +19,7 @@
             <i class="fa fa-1x fa-plus-circle"></i>Добавить</a>
           </li> 
           <li class="btn"><a class="nav-link">Редактировать</a></li>     
-          <li class="btn"><a class="btn nav-link" onclick="user_delete()">Удалить</a></li>               
+          <li class="btn"><a class="nav-link" onclick="user_delete()">Удалить</a></li>               
           <li class="dropdown btn">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true"></a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
