--- a/views/template/common/header.twig
+++ b/views/template/common/header.twig
@@ -1,9 +1,9 @@
-<header id="header" class="navbar navbar-dark" >
+<header id="header" class="navbar navbar-dark navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="{{ home }}" >{{ name }}</a>
     {% if logged %}
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
+      {# <nav class="navbar navbar-expand-lg bg-body-tertiary"> #}
+        <form class="d-flex">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -44,12 +44,12 @@
               </li>
             </ul>
           </div>
-        </div>
-      </nav>
+        </form>
+      {# </nav> #}
     {% endif %}    
-  </div>       
+  </div>
 </header>
-<!-- Modal  -->
+{# //////Modal////// #}
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
