--- a/views/template/common/login.twig
+++ b/views/template/common/login.twig
@@ -20,15 +20,15 @@
             <div class="form-group">
                 <label for="input-username">{{ entry_username }}</label>
                 <div class="input-group gap-2">
-                    <div class="input-group-text"><i class="fa fa-user"></i></div>
-                    <input type="text" name="username" value="{{ username }}" placeholder="{{ entry_username }}" id="input-username" class="form-control" />
+                    <div class="input-group-text" id="btnGroupAddon"><i class="fa fa-user"></i></div>
+                    <input type="text" name="username" value="{{ username }}" placeholder="{{ entry_username }}" id="input-username" class="form-control" aria-describedby="btnGroupAddon">
                 </div>
             </div>
-            <div class="form-group">
+            <div>
                 <label for="input-password">{{ entry_password }}</label>
                 <div class="input-group gap-2">
-                    <div class="input-group-text"><i class="fa fa-lock"></i></div>
-                    <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" class="form-control" />
+                    <span class="input-group-text" id="btnGroupAddon2"><i class="fa fa-lock"></i></span>
+                    <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" class="form-control" aria-describedby="btnGroupAddon2">
                 </div>
                 {% if forgotten %}
                     <span class="help-block"><a href="{{ forgotten }}">{{ text_forgotten }}</a></span>
