--- a/views/template/common/column_left.twig
+++ b/views/template/common/column_left.twig
@@ -1,33 +1,19 @@
 <div id="column-left" class="sidebar h-100"  style="background-color:LightSlateGray">
-  <div id="sidebarMenu">
+  <form class="h-100" id="sidebarMenu" style="overflow-y:scroll;">
     <h6 class="d-flex justify-content-between text-muted">
       <span class="m-auto d-block menu-title">Конфигуратор</span>
-      <a class="link-secondary" href="#" aria-label="Add a new class">
+      {# <a class="link-secondary" href="#" aria-label="Add a new class">
         <span data-feather="plus-circle"></span>
-      </a>
+      </a> #}
     </h6>
     <ul class="sidebar-list nav btn-group-vertical">
-      <li class="nav-item">
-        <a class="nav-link btn" href="#">Подсистемы</a>
-      </li>  
-      <li class="nav-item">
-        <a class="nav-link btn" href="#">Константы</a>
-      </li>  
-      <li class="nav-item">
-        <a class="nav-link btn" href="#">Справочники</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link btn" href="#">Документы</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link btn" href="#">Регистры</a>
-      </li>  
-      <li class="nav-item">
-        <a class="nav-link btn" href="#">Обработки</a>
-      </li>  
-      <li class="nav-item">
-        <a class="nav-link btn" href="#">Отчеты</a>
-      </li>              
+      <li class="nav-item"><a class="nav-link btn" href="#">Подсистемы</a></li>  
+      <li class="nav-item"><a class="nav-link btn" href="#">Константы</a></li>  
+      <li class="nav-item"><a class="nav-link btn" href="#">Справочники</a></li>
+      <li class="nav-item"><a class="nav-link btn" href="#">Документы</a></li>
+      <li class="nav-item"><a class="nav-link btn" href="#">Регистры</a></li>  
+      <li class="nav-item"><a class="nav-link btn" href="#">Обработки</a></li>  
+      <li class="nav-item"><a class="nav-link btn" href="#">Отчеты</a></li>              
     </ul>
-  </div>
+  </form>
 </div>
