--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -1,18 +1,19 @@
-<div class="content flex-grow-1 h-100 border bg-light">
-  <!--<div class="page-header">
-    <div class="container-fluid">
-      <div class="pull-right">
-        <button type="button" id="button-setting" title="{{ button_setting }}" data-loading-text="{{ text_loading }}" class="btn btn-info"><i class="fa fa-cog"></i></button>
+<div class="flex-grow-1 h-100 border bg-light">
+  <form class="h-100" style="overflow-y:scroll;">
+    {# <div class="page-header">
+      <div class="container-fluid">
+        <div class="pull-right">
+          <button type="button" id="button-setting" title="{{ button_setting }}" data-loading-text="{{ text_loading }}" class="btn btn-info"><i class="fa fa-cog"></i></button>
+        </div>
+        <h4>{{ heading_title }}</h4>
+        <ul class="breadcrumb bg-light">
+          {% for breadcrumb in breadcrumbs %}
+            <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
+          {% endfor %}
+        </ul>
       </div>
-      <h4>{{ heading_title }}</h4>
-      <ul class="breadcrumb bg-light">
-        {% for breadcrumb in breadcrumbs %}
-          <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
-        {% endfor %}
-      </ul>
-    </div>
-  </div>-->
-  <table onclick="row_select()" id = "user_table" class="table table-striped table-hover table-sm table-responsive" style="overflow-y: scroll;">     
+    </div> #}
+    <table onclick="row_select()" id = "user_table" class="table table-striped table-hover table-sm table-responsive" style="overflow-y: scroll;">     
         <div class="btn-group btn-group-sm" align="left" style="background-color:LightSlateGray">
           <li class="btn">
             <a class="nav-link" data-bs-toggle="modal" data-bs-target="#usersModal">
@@ -26,16 +27,17 @@
               <li><a class="dropdown-item">Обновить</a></li>
               <li><a class="dropdown-item">Дополнительно</a></li>
               <li><hr class="dropdown-divider"></li>
-              <!--<li>
+              {# <li>
                 <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#usersModal">...</a>      
-              </li>-->
+              </li> #}
             </ul>
           </li>         
         </div>      
-  </table>
+    </table>
+  </form>
 </div>
 {% include "./security.twig" %}
-<!-- Modal  -->
+{# Modal #}
 <div class="modal fade" id="usersModal" tabindex="-1" aria-labelledby="usersModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
