--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -1,5 +1,5 @@
 <div class="flex-grow-1 h-100 border bg-light">
-  <form class="h-100" style="overflow-y:scroll;">
+  <form>
     {# <div class="page-header">
       <div class="container-fluid">
         <div class="pull-right">
@@ -12,31 +12,33 @@
           {% endfor %}
         </ul>
       </div>
-    </div> #}
-    <table onclick="row_select()" id = "user_table" class="table table-striped table-hover table-sm table-responsive" style="overflow-y: scroll;">     
-        <div class="btn-group btn-group-sm" align="left" style="background-color:LightSlateGray">
-          <li class="btn">
-            <a class="nav-link" data-bs-toggle="modal" data-bs-target="#usersModal">
-            <i class="fa fa-1x fa-plus-circle"></i>Добавить</a>
-          </li> 
-          <li class="btn"><a class="nav-link">Редактировать</a></li>     
-          <li class="btn"><a class="nav-link" onclick="user_delete()">Удалить</a></li>               
-          <li class="dropdown btn">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true"></a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item">Обновить</a></li>
-              <li><a class="dropdown-item">Дополнительно</a></li>
-              <li><hr class="dropdown-divider"></li>
-              {# <li>
-                <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#usersModal">...</a>      
-              </li> #}
-            </ul>
-          </li>         
-        </div>      
-    </table>
+    </div> #}  
+    <div class="btn-group btn-group-sm" align="left" style="background-color:LightSlateGray">
+      <li class="btn">
+        <a class="nav-link" data-bs-toggle="modal" data-bs-target="#usersModal">
+        <i class="fa fa-1x fa-plus-circle"></i>Добавить</a>
+      </li> 
+      <li class="btn"><a class="nav-link">Редактировать</a></li>     
+      <li class="btn"><a class="nav-link" onclick="user_delete()">Удалить</a></li>               
+      <li class="dropdown btn">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true"></a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li><a class="dropdown-item">Обновить</a></li>
+          <li><a class="dropdown-item">Дополнительно</a></li>
+          <li><hr class="dropdown-divider"></li>
+          {# <li>
+            <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#usersModal">...</a>      
+          </li> #}
+        </ul>
+      </li>         
+    </div>    
+    <div class="h-100" style="overflow-y:scroll; overflow-x:scroll;">            
+      <table id = "user_table"  class="table table-striped table-hover table-sm table-responsive" onclick="row_select()"> 
+      </table>
+    </div> 
   </form>
 </div>
-{% include "./security.twig" %}
+{# {% include "./security.twig" %} #}
 {# Modal #}
 <div class="modal fade" id="usersModal" tabindex="-1" aria-labelledby="usersModalLabel" aria-hidden="true">
   <div class="modal-dialog">
