--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -21,12 +21,12 @@
           {% endfor %}
         </ul>
       </div>
-    </div> #}  
+    </div> #}
     {# <div id="txt_1" class=""> #}
     <div class="tab-content" id="nav-tabContent">
       <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
         <div class="btn-toolbar" role="toolbar" aria-label="Панель инструментов c группами кнопок">
-          <div class="btn-group btn-group-sm" align="left" style="background-color:LightSlateGray">
+          <ul class="btn-group btn-group-sm" style="background-color:LightSlateGray">
             <li class="btn">
               <a class="nav-link" data-bs-toggle="modal" data-bs-target="#usersModal">
               <i class="fa fa-user-plus"></i>Добавить</a>
@@ -44,14 +44,14 @@
                 </li> #}
               </ul>
             </li>         
-          </div>    
+          </ul>
           {# <div class="btn-group btn-group-sm w-100" align="justify"></div> #}            
         </div>     
         <div class="h-100" style="overflow-y:scroll; overflow-x:scroll;">            
           <table id = "user_table"  class="table table-striped table-hover table-sm table-responsive" onclick="row_select()"></table>
         </div> 
       </div>  
-    </div>       
+    </div>
 </div>
 {# {% include "./security.twig" %} #}
 {# Modal #}
