--- a/views/stylesheet/stylesheet.css
+++ b/views/stylesheet/stylesheet.css
@@ -44,6 +44,10 @@ header {
 	height: auto;
 	padding: 10px;
 	font-size: 16px;
+	
+}
+.input-group-text{
+	color:LightSlateGray
 }
 .form-signin .form-control:focus {
 	z-index: 2;
@@ -59,6 +63,7 @@ footer {
 h1, h2, h3, h4, h5, h6, p {
 	margin-top: auto;
 	margin-bottom: unset;
+	color: #282c34;
 }
 .sidebar{
 	background: #282c34;
