--- a/views/stylesheet/stylesheet.css
+++ b/views/stylesheet/stylesheet.css
@@ -77,7 +77,6 @@ h1, h2, h3, h4, h5, h6, p {
 .menu-title{
 	color: aquamarine;
 }
-
-button:hover {
-	color: black;
+button.btn-hover:hover{
+	color: black !important;
 }
