--- a/views/stylesheet/stylesheet.css
+++ b/views/stylesheet/stylesheet.css
@@ -77,6 +77,18 @@ h1, h2, h3, h4, h5, h6, p {
 .menu-title{
 	color: aquamarine;
 }
-button.btn-hover:hover{
-	color: black !important;
+.btn:hover{
+	/* color: LightSlateGray !important; */
+	/* background-color: #282c34  !important; */
+	border-color: aquamarine !important;
+}
+.btn-primary:hover{
+	color: LightSlateGray !important;
+	background-color: #282c34  !important;
+	border-color: aquamarine !important;
+}
+.btn-primary{
+	color: aquamarine !important;
+	background-color: LightSlateGray;
+	border-color: LightSlateGray;
 }
