--- a/views/template/common/column_left.twig
+++ b/views/template/common/column_left.twig
@@ -8,6 +8,8 @@
     </h6>
     <ul class="p-2 sidebar-list nav btn-group-vertical">
       <li class="nav-item"><a class="nav-link btn" href="#">Подсистемы</a></li>
+      <li class="nav-item"><a class="nav-link btn" href="#">Модули</a></li>
+      <li class="nav-item"><a class="nav-link btn" href="#">Роли</a></li>
       <li class="nav-item"><a class="nav-link btn" href="#">Константы</a></li>  
       <li class="nav-item"><a class="nav-link btn" href="#">Справочники</a></li>
       <li class="nav-item"><a class="nav-link btn" href="#">Документы</a></li>
