--- a/views/template/common/column_left.twig
+++ b/views/template/common/column_left.twig
@@ -1,4 +1,4 @@
-<div id="column-left" class="sidebar h-100"  style="background-color:LightSlateGray">
+<div id="column-left" class="sidebar h-100">
   <form class="h-100" id="sidebarMenu" style="overflow-y:scroll;">
     <h6 class="d-flex justify-content-between text-muted">
       <span class="m-auto d-block menu-title mt-1">Конфигуратор</span>
