--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -10,21 +10,21 @@
     <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
       <div class="btn-toolbar" role="toolbar" aria-label="Панель инструментов c группами кнопок">
         <div class="btn-group btn-group-sm" role="group">
-          <button type="button" class="btn btn-primary d-flex gap-2" data-bs-toggle="modal" data-bs-target="#usersModal">
+          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" data-bs-toggle="modal" data-bs-target="#usersModal">
             <i class="fa fa-user-plus"></i>
-            Добавить
+            <span>Добавить</span>
           </button> 
-          <button type="button" class="btn btn-primary">
+          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center">
             <i class="fa fa-edit"></i>
-            Редактировать
+            <span>Редактировать</span>
           </button>
-          <button type="button" class="btn btn-primary">
+          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center">
             <i class="fa fa-clone" aria-hidden="true"></i>
-            Копировать
+            <span>Копировать</span>
           </button>
-          <button type="button" class="btn btn-primary" onclick="user_delete()">
+          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="user_delete()">
             <i class="fa fa-user-times"></i>
-            Удалить
+            <span>Удалить</span>
           </button>
           <div class="btn-group btn-group-sm" role="group">              
             <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"></button>
