Исправление мелких недочетов + стилизация кнопок

--- a/views/template/common/footer.twig
+++ b/views/template/common/footer.twig
@@ -1,6 +1,6 @@
 <footer class="footer d-flex justify-content-center p-2">
     <a href="https://eva.brainrs.com">EVA © 2023 Brain Retail Service LLC</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
     <!--<a href="https://eva.brainrs.com/documentation" target="_blank">Документация</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;-->
-    <a href="https://github.com/JetBrain2056">Repositoty GitHub</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+    <a href="https://github.com/JetBrain2056">Repository GitHub</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
     {{ text_version }}&nbsp;{{ Version }}_{{ lang }}
 </footer>
