--- a/views/stylesheet/stylesheet.css
+++ b/views/stylesheet/stylesheet.css
@@ -77,7 +77,7 @@ h1, h2, h3, h4, h5, h6, p {
 .menu-title{
 	color: aquamarine;
 }
-.btn:hover{
+.btn:hover, .btn:focus{
 	color: #00ff93 !important;
 	border-color: #00ff92 !important;
 }
@@ -85,6 +85,7 @@ h1, h2, h3, h4, h5, h6, p {
 	color: #58fcb8 !important;
 	background-color: #282c34  !important;
 	border-color: aquamarine !important;
+	transition: all .2s linear;
 }
 .btn-primary{
 	color: aquamarine !important;
