--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -73,7 +73,7 @@
             </div>                                     
             <label for="input-Cpassword">Confirm password:</label>            
             <div class="input-group">
-              <input type="password" name="Cpassword" value="" placeholder="Password" id="input-Cpassword" class="form-control"/>                            
+              <input type="password" name="confirmpass" value="" placeholder="Password" id="input-confirmpass" class="form-control"/>                            
             </div>  
             <label for="input-eauth">Enterprise authentication:</label>            
             <div class="form-group">
