--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -29,7 +29,7 @@
           <div class="btn-group btn-group-sm" role="group">              
             <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"></button>
             <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-              <li><a class="dropdown-item"><i class="fa fa-refresh"></i>Обновить</a></li>
+              <li><a class="dropdown-item d-flex gap-2 align-items-center"><i class="fa fa-refresh"></i>Обновить</a></li>
               <li><a class="dropdown-item">Дополнительно</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item">...</a></li>
@@ -38,7 +38,7 @@
         </div>       
       </div>        
       <div class="h-100 overflow-scroll"> 
-        <table id = "user_table"  class="h-100 table table-striped table-hover table-sm table-responsive"></table>
+        <table id="user_table"  class="h-100 table table-striped table-hover table-sm table-responsive"></table>
       </div>
     </div>
   </div>       
