Dashboard elements are output via js

--- a/views/index.twig
+++ b/views/index.twig
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>EVA</title>    
+        <title>EVA</title>
+        <script defer src="template/common/aside.js"></script>
         <script defer src="./common.js"></script>
         <script defer src="./@popperjs/core/dist/umd/popper.min.js"></script>
         <script defer src="./js/bootstrap.min.js"></script>
